# recorder

./: .editorconfig  .gitignore  CMakeLists.txt
.github/workflows/: deploy.yml
include/: miniaudio.h  sha512.h
misc/: install-systemd-service.sh
src/: main.cpp
src/dashboard/: app.h  dashboard.cpp  dashboard.h
src/dashboard/auth/: auth.cpp  auth.h
src/dashboard/cpu/: CpuInfo.h
src/recording/: baseRecorder.h  recorders.h
src/recording/audio/: audioRecorder.cpp  audioRecorder.h
ui/: CMakeLists.txt  index.html  package.json  tailwind.config.js
ui/src/: App.tsx  index.css  main.tsx
ui/src/components/Navbar/: Config.tsx  Navbar.tsx
ui/src/components/admin-config/: AdminConfig.tsx
ui/src/components/audio-info/: AudioInfo.tsx
ui/src/components/audio-stream/: AudioStream.tsx  Channel.tsx
ui/src/components/device-info/: DeviceInfo.tsx  DiskSizeProgress.tsx  PerformanceGraph.tsx
ui/src/components/login/: Login.tsx
ui/src/providers/: PermissionProvider.tsx  RecorderProvider.tsx  WebsocketProvider.tsx
